# doc/swagger.yml
@@ -143,6 +143,44 @@ paths:
           schema: {
             "$ref": "#/definitions/error"
           }
+  /workspace/folder/add:
+    post:
+      tags:
+        - "Workspace"
+        summary: "Add a folder to the workspace"
+        consumes:
+          - "application/json"
+        produces:
+          - "application/json"
+        parameters:
+          - in: "header"
+            name: Authorization
+            type: "string"
+          - in: "header"
+            name: Passphrase
+            type: "string"
+          - in: "body"
+            name: "body"
+            description: "Authentication information"
+            required: true
+            schema:
+              $ref: "#/definitions/folder"
+        responses:
+          "201":
+            description: "Folder successfully created"
+            schema: {
+              "$ref": "#/definitions/success_create_folder"
+            }
+          "400":
+            description: "Bad request"
+            schema: {
+              "$ref": "#/definitions/bad_request"
+            }
+          "500":
+            description: "Error when creating a folder"
+            schema: {
+              "$ref": "#/definitions/error"
+            }
   /workspace/keys/add:
     post:
       tags:
@@ -281,6 +319,26 @@ definitions:
             folder:
               type: "string"
               format: "uuid"
+  folder:
+    type: "object"
+    required:
+     - "workspace_id"
+     - "text"
+     - "parent"
+    properties:
+      workspace_id:
+        type: "string"
+        format: "uuid"
+      parent:
+        type: "string"
+        description: "Parent folder (UUID or # for Root)"
+      text:
+        type: "string"
+  success_create_folder:
+    type: "object"
+    properties:
+      status: 
+        type: "boolean"
   key:
     type: "object"
     required:
